--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <link rel="stylesheet" href="css/ahorcado.css">
+                <script src="js/palabras.js"></script>
+
                
 
 
@@ -29,38 +31,40 @@
                                 </p>
 
                                 <div id = "imagenAhorcado"> </div>
+                                <div id = "imagenPerdedor"> </div>
+                                <div id = "imagenGanador"> </div>
                                 <div>
                                     <button id="jugar">JUGAR</button>
                                 </div>
 
                                 <div id="teclado">
-                                    <button>q</button>
-                                    <button>w</button>
-                                    <button>e</button>
-                                    <button>r</button>
-                                    <button>t</button>
-                                    <button>y</button>
-                                    <button>u</button>
-                                    <button>i</button>
-                                    <button>o</button>
-                                    <button>p</button>
-                                    <button>a</button>
-                                    <button>s</button>
-                                    <button>d</button>
-                                    <button>f</button>
-                                    <button>g</button>
-                                    <button>h</button>
-                                    <button>j</button>
-                                    <button>k</button>
-                                    <button>l</button>
-                                    <button>ñ</button>
-                                    <button>z</button>
-                                    <button>x</button>
-                                    <button>c</button>
-                                    <button>v</button>
-                                    <button>b</button>
-                                    <button>n</button>
-                                    <button>m</button>
+                                    <button>Q</button>
+                                    <button>W</button>
+                                    <button>E</button>
+                                    <button>R</button>
+                                    <button>T</button>
+                                    <button>Y</button>
+                                    <button>U</button>
+                                    <button>I</button>
+                                    <button>O</button>
+                                    <button>P</button>
+                                    <button>A</button>
+                                    <button>S</button>
+                                    <button>D</button>
+                                    <button>F</button>
+                                    <button>G</button>
+                                    <button>H</button>
+                                    <button>J</button>
+                                    <button>K</button>
+                                    <button>L</button>
+                                    <button>Ñ</button>
+                                    <button>Z</button>
+                                    <button>X</button>
+                                    <button>C</button>
+                                    <button>V</button>
+                                    <button>B</button>
+                                    <button>N</button>
+                                    <button>M</button>
                                 </div>
 
                             </div>
