--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <div id = "imagenAhorcado"> </div>
                                 <div id = "imagenPerdedor"> </div>
                                 <div id = "imagenGanador"> </div>
-                                <div>
+                                <div id ="botonJugar">
                                     <button id="jugar">JUGAR</button>
                                 </div>
 
