--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                     <main>
                         <section>
                             <div class="container">
-                                <p id="mensaje"></p>
+                        <!--    <p id="mensaje"></p> -->
+
                                 <p id="palabra_adivinar">
-                                    <span>H</span> 
-                                    <span>O</span> 
-                                    <span>R</span>  
-                                    <span>C</span> 
+                                    <span>H</span>
+                                    <span>O</span>
+                                    <span>R</span>
+                                    <span>C</span>
                                     <span>A</span>
                                 </p>
 
@@ -37,7 +38,7 @@
                                     <button id="jugar">JUGAR</button>
                                 </div>
 
-                                <div id="teclado">
+                                <div id="teclado" enabled = "false">
                                     <button>Q</button>
                                     <button>W</button>
                                     <button>E</button>
