--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                             </div>
                         </section>
                     </main>
-                <!--
+                
                     <footer>
-                        @Todos los derechos Reservados
+                        @DST: Proyecto Numero 2
                     </footer>
-                -->
-                    <script src="js/prototipo.js"></script>
                 </body>
+                <script src="js/prototipo.js"></script>
+
             </html>
 
