--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
                                     <span>C</span>
                                     <span>A</span>
                                 </p>
-
+                                
                                 <div id = "imagenAhorcado"> </div>
                                 <div id = "imagenPerdedor"> </div>
                                 <div id = "imagenGanador"> </div>
+                                <span id="contador">Intento N°: 5</span>
                                 <div id ="botonJugar">
                                     <button id="jugar">JUGAR</button>
                                 </div>
