--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <div id = "imagenAhorcado"> </div>
                                 <div id = "imagenPerdedor"> </div>
                                 <div id = "imagenGanador"> </div>
-                                <span id="contador">Intento N°: 5</span>
+                                <span id="contador">5</span>
                                 <div id ="botonJugar">
                                     <button id="jugar">JUGAR</button>
                                 </div>
