--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
                    <title>Ahorcado</title>
                 </head>
                 <body>
-                    <header>
-                        <label class="titulo">
+                    <header id = "tituloPrincipal">
+                        <label id="titulo">
                             AHORCADO
                         </label>
                     </header>
