--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <link rel="stylesheet" href="css/ahorcado.css">
+                <link rel="stylesheet" href="css/texto.css">
+
                    <title>Ahorcado</title>
                 </head>
                 <body>
-                    <header id = "tituloPrincipal">
-                        <label id="titulo">
-                            AHORCADO
-                        </label>
-                    </header>
+                    <header id = "tituloPrincipal"></header>
                     <main>
                         <section>
                             <div class="container">
