--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
                 </div>
             </section>
         </main>
-
-        <footer>
-            @DST: Proyecto Numero 2
-        </footer>
+        <footer> @DST: Proyecto Numero 2 </footer>
 
     </body>
+   
     <script src="js/prototipo.js"></script>
 
 </html>
